--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,6 @@
  */
 
 main.main_area{
-    position: fixed;
+    position: absolute;
     top: 60px;
 }
